I don't know but mobile responsiveness (horizontal scrollbar) is fixed

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -376,4 +376,7 @@ a {
     margin-left: 10px;
     margin-right: 10px;
   }
+
+  * { outline: 1px red solid !important; visibility: visible !important }
+  
 }
